accidental mistake fixed, whitespace now added for projects on larger screens

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -85,4 +85,8 @@
         top: 40vh;
         width: 100%;
     }
+    .index-project {
+        grid-column: 2 / -2;
+        gap: 3rem;
+    }
 }
